--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,4 +8,4 @@ j2ee.server.middleware=C:/Users/yip14/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\yip14\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=/Users/pinky/Library/Application Support/NetBeans/16/build.properties
