--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,11 +1,11 @@
-deploy.ant.properties.file=C:\\Users\\yip14\\AppData\\Roaming\\NetBeans\\12.0\\config\\GlassFishEE6\\Properties\\gfv3-1649444104.properties
-file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\yip14\\Documents\\NetBeansProjects\\epl\\dependencies\\mysql-connector-j-8.0.32.jar
+deploy.ant.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.0\\config\\GlassFishEE6\\Properties\\gfv3-1982749504.properties
+file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\user\\Documents\\GitHub\\epl\\dependencies\\mysql-connector-j-8.0.32.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/yip14/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/yip14/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\yip14\\GlassFish_Server\\glassfish;C:\\Users\\yip14\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv5ee8:localhost:4848
-j2ee.server.middleware=C:/Users/yip14/GlassFish_Server
+j2ee.server.domain=C:/Users/user/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/user/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\user\\GlassFish_Server\\glassfish;C:\\Users\\user\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv5ee8:localhost:4848
+j2ee.server.middleware=C:/Users/user/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=/Users/pinky/Library/Application Support/NetBeans/16/build.properties
+user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
